# OpenADAS

./: .gitignore  CMakeLists.txt  README.md  TODO.md  config.h.in  cv_helloworld.py  keras_helloworld.py  requirements.txt  tf_helloworld.py
include/abstraction/: CameraConsumer.hpp  CameraConsumerFactory.hpp  SimulationCameraConsumer.hpp  StandardUtils.hpp
src/: CMakeLists.txt  main.cpp
src/abstraction/: CameraConsumerFactory.cpp  SimulationCameraConsumer.cpp  StandardUtils.cpp
